Adding features to legacy put and patch templates

--- a/website/src/content/docs/docs/libraries/azure-resource-manager/reference/index.mdx
+++ b/website/src/content/docs/docs/libraries/azure-resource-manager/reference/index.mdx
@@ -323,6 +323,9 @@ npm install --save-peer @azure-tools/typespec-azure-resource-manager
 
 ### Operations
 
+- [`CreateOperation`](./interfaces.md#Azure.ResourceManager.Legacy.CreateOperation)
+- [`CreateOrUpdateAsync`](./interfaces.md#Azure.ResourceManager.Legacy.CreateOrUpdateAsync)
+- [`CreateOrUpdateSync`](./interfaces.md#Azure.ResourceManager.Legacy.CreateOrUpdateSync)
 - [`CustomPatchAsync`](./interfaces.md#Azure.ResourceManager.Legacy.CustomPatchAsync)
 - [`CustomPatchSync`](./interfaces.md#Azure.ResourceManager.Legacy.CustomPatchSync)
 - [`UpdateOperation`](./interfaces.md#Azure.ResourceManager.Legacy.UpdateOperation)
