--- a/website/src/content/docs/docs/howtos/Generate client libraries/02package.mdx
+++ b/website/src/content/docs/docs/howtos/Generate client libraries/02package.mdx
@@ -148,6 +148,9 @@ type PetStoreClientFeedOptions struct {}
 # generated response.go
 type PetStoreClientFeedResponse struct {}
 
+# Usage Sample
+petStoreClient := NewPetStoreClient(nil, "my-endpoint")
+petStoreClient.Feed()
 ```
 
 </ClientTabs>
